# Fizika-sta-drugo

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  dfPath.cpp  dfPath.h  extraTools.cpp  extraTools.h  main.cpp  printStudy.cpp  printStudy.h  study.cpp  study.h  testFile.sh
